--- a/compli.css
+++ b/compli.css
@@ -269,6 +269,8 @@ body.dark .closeBtn {
 body.dark .favBar {
     background: #a29473;
     box-shadow: inset 0 2px 8px #6b6455;
+    color: #2a251a;
+    font-weight: 550;
 }
 
 .favBar h3 {
@@ -302,4 +304,5 @@ body.dark.favBar h3 {
         flex: 1 1 100%;
         max-width: 100%;
     }
+
 }
